fix: eslint fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,13 +60,26 @@ jobs:
       run-coverage: true
       upload-coverage: ${{ github.event_name == 'push' }}
 
-  # Security checks
-  security:
+  # Dependency Review (PRs only)
+  dependency-review:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     permissions:
       contents: read
       pull-requests: write
-      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
+        with:
+          fail-on-severity: moderate
+          deny-licenses: GPL-2.0, GPL-3.0
+
+  # npm audit checks
+  npm-audit:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,13 +100,6 @@ jobs:
           cd server && npm ci
           cd ../client && npm ci
 
-      - name: Dependency Review (PRs only)
-        if: github.event_name == 'pull_request'
-        uses: actions/dependency-review-action@v4
-        with:
-          fail-on-severity: moderate
-          deny-licenses: GPL-2.0, GPL-3.0
-
       - name: Run npm audit (root)
         run: npm audit --audit-level=moderate
 
@@ -107,8 +113,31 @@ jobs:
           cd client
           npm audit --audit-level=moderate
 
+  # Snyk security scan
+  snyk-scan:
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: |
+            package-lock.json
+            server/package-lock.json
+            client/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          npm ci
+          cd server && npm ci
+          cd ../client && npm ci
+
       - name: Run Snyk security scan
-        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         uses: snyk/actions/node@master
         continue-on-error: false
         env:
@@ -116,7 +145,18 @@ jobs:
         with:
           args: --severity-threshold=high --all-projects
 
-      - name: CodeQL Analysis
+  # CodeQL Analysis
+  codeql-analysis:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
           languages: javascript
@@ -205,7 +245,10 @@ jobs:
       - validate-pr-title
       - lint
       - test
-      - security
+      - dependency-review
+      - npm-audit
+      - snyk-scan
+      - codeql-analysis
       - build
       - validate-changelog
     if: always()
@@ -226,8 +269,20 @@ jobs:
             FAILED_JOBS="${FAILED_JOBS} test"
           fi
           
-          if [ "${{ needs.security.result }}" != "success" ]; then
-            FAILED_JOBS="${FAILED_JOBS} security"
+          if [ "${{ needs.dependency-review.result }}" != "success" ] && [ "${{ needs.dependency-review.result }}" != "skipped" ]; then
+            FAILED_JOBS="${FAILED_JOBS} dependency-review"
+          fi
+          
+          if [ "${{ needs.npm-audit.result }}" != "success" ]; then
+            FAILED_JOBS="${FAILED_JOBS} npm-audit"
+          fi
+          
+          if [ "${{ needs.snyk-scan.result }}" != "success" ] && [ "${{ needs.snyk-scan.result }}" != "skipped" ]; then
+            FAILED_JOBS="${FAILED_JOBS} snyk-scan"
+          fi
+          
+          if [ "${{ needs.codeql-analysis.result }}" != "success" ]; then
+            FAILED_JOBS="${FAILED_JOBS} codeql-analysis"
           fi
           
           if [ "${{ needs.build.result }}" != "success" ]; then
