--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,31 +1,14 @@
 name: Security Scan
 
 on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
+  # Note: PR and push security checks are handled by ci.yml workflow
+  # This workflow only runs on schedule and manual dispatch for periodic security scans
   schedule:
     # Run weekly on Mondays
     - cron: '0 0 * * 1'
   workflow_dispatch:
 
 jobs:
-  dependency-review:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    permissions:
-      contents: read
-      pull-requests: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Dependency Review
-        uses: actions/dependency-review-action@v4
-        with:
-          fail-on-severity: moderate
-
   npm-audit:
     runs-on: ubuntu-latest
     steps:
