--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
         "dev": "nodemon server.js",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "lint": "eslint . --ext .js",
+        "lint:fix": "eslint . --ext .js --fix"
     },
     "dependencies": {
         "axios": "^1.6.2",
@@ -28,6 +30,7 @@
         "@testing-library/jest-dom": "^6.1.5",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.1",
+        "eslint": "^8.57.1",
         "jest": "^30.2.0",
         "nodemon": "^3.0.2",
         "supertest": "^7.1.4"
