--- a/server/package.json
+++ b/server/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "docked-server",
-  "version": "1.3.4-dev",
-  "description": "Backend server for Docked",
-  "main": "server.js",
+    "name": "docked-server",
+    "version": "1.3.1",
+    "description": "Backend server for Docked",
+    "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .js"
   },
-  "dependencies": {
-    "axios": "^1.6.2",
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "express-rate-limit": "^8.2.1",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "winston": "^3.11.0"
-  },
+    "dependencies": {
+        "axios": "^1.6.2",
+        "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "sqlite3": "^5.1.7",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
+        "winston": "^3.11.0"
+    },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "eslint": "^8.57.0",
     "jest": "^30.2.0",
-    "nodemon": "^3.1.11",
+    "nodemon": "^3.0.2",
     "supertest": "^7.1.4"
   },
-  "overrides": {
-    "js-yaml": "^4.1.1"
-  }
+    "overrides": {
+        "js-yaml": "^4.1.1"
+    }
 }
