--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -80,41 +80,6 @@ jobs:
         if: always()
         continue-on-error: true
 
-  codeql-analysis:
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['javascript']
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v4
-        with:
-          languages: ${{ matrix.language }}
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: |
-            package-lock.json
-            server/package-lock.json
-            client/package-lock.json
-
-      - name: Install dependencies
-        run: |
-          npm ci
-          cd server && npm ci
-          cd ../client && npm ci
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v4
+  # CodeQL analysis is handled by ci.yml workflow on every PR and push
+  # This avoids configuration mismatch warnings and ensures consistent scanning
 
