--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -10,12 +10,15 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  pre-release:
+  # Job 1: Calculate version and prepare release info (fast, runs first)
+  prepare-release:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      packages: write
-      pull-requests: write
+      contents: read
+    outputs:
+      tag_name: ${{ steps.version.outputs.tag_name }}
+      dev_version: ${{ steps.version.outputs.dev_version }}
+      commits: ${{ steps.commits.outputs.commits }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,9 +29,11 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies (minimal)
+        run: npm ci
 
       - name: Get current version and determine next dev version
         id: version
@@ -128,66 +133,6 @@ jobs:
           echo "dev_version=$DEV_VERSION" >> $GITHUB_OUTPUT
           echo "Final dev tag: $TAG_NAME (version: $DEV_VERSION)"
 
-      - name: Update version in package.json files
-        run: |
-          DEV_VERSION="${{ steps.version.outputs.dev_version }}"
-          DEV_VERSION_WITH_SUFFIX="${DEV_VERSION}-dev"
-          echo "Updating version to $DEV_VERSION_WITH_SUFFIX in all package.json files"
-          # Update root package.json
-          npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
-          # Update server package.json
-          cd server && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
-          # Update client package.json
-          cd ../client && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
-          cd ..
-          echo "✓ Version updated to $DEV_VERSION_WITH_SUFFIX"
-
-      - name: Commit version update
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          
-          # Check if there are changes to commit
-          if git diff --quiet package.json server/package.json client/package.json; then
-            echo "No version changes to commit"
-          else
-            git add package.json server/package.json client/package.json
-            git commit -m "chore: bump version to ${{ steps.version.outputs.dev_version }}-dev [skip ci]"
-            git push origin HEAD:${{ github.ref_name }}
-            echo "✓ Committed version update to ${{ steps.version.outputs.dev_version }}-dev"
-          fi
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.version.outputs.dev_version }}-dev
-            ${{ env.REGISTRY }}/${{ github.repository }}:dev
-          build-args: |
-            NODE_ENV=production
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
-
-      - name: Create git tag
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag -a "${{ steps.version.outputs.tag_name }}" -m "Pre-release ${{ steps.version.outputs.tag_name }}"
-          git push origin "${{ steps.version.outputs.tag_name }}"
-
       - name: Get commits since previous dev release
         id: commits
         run: |
@@ -232,16 +177,119 @@ jobs:
           echo "$COMMITS_LIST" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
+  # Job 2: Update version and commit (runs in parallel with Docker build)
+  update-version:
+    runs-on: ubuntu-latest
+    needs: prepare-release
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: |
+            package-lock.json
+            server/package-lock.json
+            client/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          npm ci
+          cd server && npm ci
+          cd ../client && npm ci
+
+      - name: Update version in package.json files
+        run: |
+          DEV_VERSION="${{ needs.prepare-release.outputs.dev_version }}"
+          DEV_VERSION_WITH_SUFFIX="${DEV_VERSION}-dev"
+          echo "Updating version to $DEV_VERSION_WITH_SUFFIX in all package.json files"
+          npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
+          cd server && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
+          cd ../client && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
+          cd ..
+
+      - name: Commit version update
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          if git diff --quiet package.json server/package.json client/package.json; then
+            echo "No version changes to commit"
+          else
+            git add package.json server/package.json client/package.json
+            git commit -m "chore: bump version to ${{ needs.prepare-release.outputs.dev_version }}-dev [skip ci]"
+            git push origin HEAD:${{ github.ref_name }}
+            echo "✓ Committed version update to ${{ needs.prepare-release.outputs.dev_version }}-dev"
+          fi
+
+      - name: Create git tag
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "${{ needs.prepare-release.outputs.tag_name }}" -m "Pre-release ${{ needs.prepare-release.outputs.tag_name }}"
+          git push origin "${{ needs.prepare-release.outputs.tag_name }}"
+
+  # Job 3: Build Docker image (amd64 only for dev - faster)
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: prepare-release
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image (amd64 only for dev)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ github.repository }}:${{ needs.prepare-release.outputs.dev_version }}-dev
+            ${{ env.REGISTRY }}/${{ github.repository }}:dev
+          build-args: |
+            NODE_ENV=production
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
+
+  # Job 4: Create GitHub release (runs after version update and Docker build)
+  create-release:
+    runs-on: ubuntu-latest
+    needs: [prepare-release, update-version, build-docker]
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Create GitHub Pre-Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          TAG_NAME="${{ steps.version.outputs.tag_name }}"
-          DEV_VERSION="${{ steps.version.outputs.dev_version }}"
+          TAG_NAME="${{ needs.prepare-release.outputs.tag_name }}"
+          DEV_VERSION="${{ needs.prepare-release.outputs.dev_version }}"
           RELEASE_NAME="v$DEV_VERSION-dev"
           RELEASE_DATE=$(date -u +'%Y-%m-%d %H:%M:%S UTC')
           
-          # Get previous release tag for changelog link (Sonarr format: v1.0.0...v1.0.1-dev)
           PREVIOUS_RELEASE_TAG=$(git tag -l "v*" | grep -v "dev" | grep -v "latest" | sort -V | tail -1)
           if [ -n "$PREVIOUS_RELEASE_TAG" ]; then
             CHANGELOG_LINK="[${PREVIOUS_RELEASE_TAG}...${TAG_NAME}](https://github.com/${{ github.repository }}/compare/${PREVIOUS_RELEASE_TAG}...${TAG_NAME})"
@@ -260,7 +308,7 @@ jobs:
           
           ## 📝 Commits in This Release
           
-          ${{ steps.commits.outputs.commits }}
+          ${{ needs.prepare-release.outputs.commits }}
           
           ---
           
@@ -275,4 +323,3 @@ jobs:
             --repo ${{ github.repository }}
           
           echo "✓ Created GitHub pre-release: $TAG_NAME"
-
