--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -231,10 +231,31 @@ jobs:
           path: release-artifacts/
           retention-days: 90
 
-  # Build and push Docker image
-  docker:
+  # Extract metadata for Docker tags (shared by both build jobs)
+  docker-metadata:
     runs-on: ubuntu-latest
     needs: [version, build]
+    outputs:
+      tags: ${{ steps.meta.outputs.tags }}
+      labels: ${{ steps.meta.outputs.labels }}
+    steps:
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository }}
+          tags: |
+            type=raw,value=${{ needs.version.outputs.version }}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+          flavor: |
+            latest=false
+
+  # Build and push Docker image for amd64 (runs in parallel with arm64)
+  docker-amd64:
+    runs-on: ubuntu-latest
+    needs: [version, build, docker-metadata]
     permissions:
       contents: read
       packages: write
@@ -251,11 +272,8 @@ jobs:
         run: |
           VERSION="${{ needs.version.outputs.version }}"
           echo "Updating version to $VERSION in all package.json files for Docker build"
-          # Update root package.json
           npm pkg set version="$VERSION"
-          # Update server package.json
           cd server && npm pkg set version="$VERSION"
-          # Update client package.json
           cd ../client && npm pkg set version="$VERSION"
           cd ..
           echo "✓ Version updated to $VERSION"
@@ -270,31 +288,67 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository }}
-          tags: |
-            type=raw,value=${{ needs.version.outputs.version }}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-          flavor: |
-            latest=false
-
-      - name: Build and push Docker image
+      - name: Build and push Docker image (amd64)
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ needs.docker-metadata.outputs.tags }}
+          labels: ${{ needs.docker-metadata.outputs.labels }}
           build-args: |
             NODE_ENV=production
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+
+  # Build and push Docker image for arm64 (runs in parallel with amd64)
+  docker-arm64:
+    runs-on: ubuntu-latest
+    needs: [version, build, docker-metadata]
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Update version in package.json files
+        run: |
+          VERSION="${{ needs.version.outputs.version }}"
+          echo "Updating version to $VERSION in all package.json files for Docker build"
+          npm pkg set version="$VERSION"
+          cd server && npm pkg set version="$VERSION"
+          cd ../client && npm pkg set version="$VERSION"
+          cd ..
+          echo "✓ Version updated to $VERSION"
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image (arm64)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ needs.docker-metadata.outputs.tags }}
+          labels: ${{ needs.docker-metadata.outputs.labels }}
+          build-args: |
+            NODE_ENV=production
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/arm64
 
   # Generate changelog
   changelog:
@@ -323,7 +377,7 @@ jobs:
   # Create GitHub release
   release:
     runs-on: ubuntu-latest
-    needs: [version, build, docker, changelog]
+    needs: [version, build, docker-amd64, docker-arm64, changelog]
     permissions:
       contents: write
     steps:
