--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -237,13 +237,35 @@ jobs:
   # Job 3: Build Docker image (amd64 only for dev - faster)
   build-docker:
     runs-on: ubuntu-latest
-    needs: prepare-release
+    needs: [prepare-release, update-version]
     permissions:
       contents: read
       packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # Fetch the latest from branch to get version update from update-version job
+          fetch-depth: 0
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '18'
+
+      - name: Update version in package.json files for Docker build
+        run: |
+          DEV_VERSION="${{ needs.prepare-release.outputs.dev_version }}"
+          DEV_VERSION_WITH_SUFFIX="${DEV_VERSION}-dev"
+          echo "Ensuring version is $DEV_VERSION_WITH_SUFFIX in all package.json files for Docker build"
+          # Fetch latest from branch to get version update from update-version job
+          git fetch origin
+          # Update version in package.json files (in case update-version job hasn't committed yet)
+          npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
+          cd server && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
+          cd ../client && npm pkg set version="$DEV_VERSION_WITH_SUFFIX"
+          cd ..
+          echo "✓ Version set to $DEV_VERSION_WITH_SUFFIX for Docker build"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
