--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "docs:schema": "node scripts/generateSchemaDoc.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
