--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.1",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.5.1",
+    "baseline-browser-mapping": "^2.9.14",
     "yaml": "^2.8.2"
   },
   "scripts": {
