--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "nanoid": "^5.1.6",
-    "sqlite3": "^5.1.7",
+    "sqlite3": "^5.1.8",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.19.0"
@@ -38,6 +38,7 @@
     "supertest": "^7.2.2"
   },
   "overrides": {
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "tar": "^7.6.0"
   }
 }
