--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -252,7 +252,7 @@ jobs:
           flavor: |
             latest=false
 
-  # Build and push Docker image for multi-arch (amd64 + arm64)
+  # Build and push Docker image for amd64
   docker-build:
     runs-on: ubuntu-latest
     needs: [version, build, docker-metadata]
@@ -294,7 +294,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image (multi-arch amd64 + arm64)
+      - name: Build and push Docker image (amd64)
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -305,7 +305,7 @@ jobs:
             NODE_ENV=production
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
   # Generate changelog
   changelog:
