--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "nth-check": "^2.1.1",
     "webpack-dev-server": "^5.2.1",
     "js-yaml": "^4.1.1",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "eslint": "^9.26.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
