--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           cd client
           if [ -f "node_modules/.bin/eslint" ]; then
-            npx eslint src --ext .js,.jsx --max-warnings=0
+            npx eslint src --max-warnings=0
           elif [ -d "node_modules/react-scripts" ]; then
             CI=true npm run build 2>&1 | tee /tmp/build.log
             BUILD_EXIT_CODE=${PIPESTATUS[0]}
