--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,19 @@
     "nth-check": "^2.1.1",
     "webpack-dev-server": "^5.2.1",
     "js-yaml": "^4.1.1",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "eslint": "^9.26.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.5.1",
     "baseline-browser-mapping": "^2.9.17",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "globals": "^15.14.0",
     "yaml": "^2.8.2"
   },
   "scripts": {
@@ -32,11 +38,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
