--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend server for Docked",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "DATA_DIR=../data node server.js",
+    "dev": "DATA_DIR=../data nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
