--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,14 @@
   "version": "2.3.10",
   "private": true,
   "dependencies": {
-    "axios": "^1.13.4",
+    "axios": "^1.13.5",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.13.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^1.0.10",
     "react-select": "^5.10.2",
     "recharts": "^3.7.0"
   },
@@ -27,8 +27,8 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.5.1",
     "baseline-browser-mapping": "^2.9.19",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^7.0.0",
     "globals": "^15.14.0",
     "yaml": "^2.8.2"
